Trending Gifs List

--- a/app/src/main/res/layout/fragment_trending_gifs.xml
+++ b/app/src/main/res/layout/fragment_trending_gifs.xml
@@ -2,6 +2,15 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <import type="com.giffy.trending.TrendingGifsViewModel"/>
+        <import type="com.giffy.trending.TrendingGifsViewModel.State"/>
+
+        <variable
+            name="trendingGifsViewModel"
+            type="com.giffy.trending.TrendingGifsViewModel" />
+    </data>
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
@@ -37,9 +46,35 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/gifsList"
+            android:id="@+id/trendingGifsList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+            visibleGone="@{trendingGifsViewModel.state == TrendingGifsViewModel.State.Preview}" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            visibleGone="@{trendingGifsViewModel.state == TrendingGifsViewModel.State.Loading}"/>
+
+        <TextView
+            android:id="@+id/emptyStateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/md_theme_light_error"
+            android:text="@string/no_trending_gifs"
+            visibleGone="@{trendingGifsViewModel.State == TrendingGifsViewModel.State.Empty}"/>
+
+        <TextView
+            android:id="@+id/errorStateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/md_theme_light_error"
+            android:text="@string/something_went_wrong"
+            visibleGone="@{trendingGifsViewModel.State == TrendingGifsViewModel.State.Error}"/>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
