--- a/app/src/main/res/layout/fragment_trending_gifs.xml
+++ b/app/src/main/res/layout/fragment_trending_gifs.xml
@@ -5,10 +5,15 @@
 
     <data>
         <import type="com.giffy.trending.TrendingGifsViewModel"/>
+        <import type="com.giffy.search.SearchViewModel"/>
 
         <variable
             name="trendingGifsViewModel"
-            type="com.giffy.trending.TrendingGifsViewModel" />
+            type="TrendingGifsViewModel" />
+
+        <variable
+            name="searchViewModel"
+            type="SearchViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -37,10 +42,11 @@
                     app:layout_scrollFlags="scroll|enterAlways"
                     tools:layout="@layout/fragment_random_gif" />
 
-                <com.google.android.material.appbar.MaterialToolbar
-                    android:id="@+id/toolbar"
+                <com.google.android.material.search.SearchBar
+                    android:id="@+id/search_bar"
                     android:layout_width="match_parent"
-                    android:layout_height="?android:attr/actionBarSize"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/searchbar_hint"
                     app:layout_collapseMode="pin"
                     app:layout_scrollFlags="scroll|enterAlways" />
             </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -52,5 +58,13 @@
             android:layout_height="match_parent"
             layout="@layout/layout_trending_gifs"
             app:trendingGifsViewModel="@{trendingGifsViewModel}"/>
+
+        <include
+            android:id="@+id/searchLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            layout="@layout/layout_search_gifs"
+            app:searchViewModel="@{searchViewModel}"
+            app:layout_anchor="@id/search_bar" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
