Random gif UI optimization
Delay loading next random gif until full resolution gif is loaded into the imageview

--- a/app/src/main/res/layout/fragment_random_gif.xml
+++ b/app/src/main/res/layout/fragment_random_gif.xml
@@ -58,8 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            visibleGone="@{viewModel.state == State.Preview}"
-            gif="@{viewModel.randomGif}"/>
+            visibleGone="@{viewModel.state == State.Preview}" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
