--- a/app/src/main/res/layout/fragment_trending_gifs.xml
+++ b/app/src/main/res/layout/fragment_trending_gifs.xml
@@ -48,7 +48,8 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/searchbar_hint"
                     app:layout_collapseMode="pin"
-                    app:layout_scrollFlags="scroll|enterAlways" />
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    app:backgroundTint="@color/searchbar_theme_tint"/>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
