--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -67,4 +67,6 @@
     <color name="rating_pg">#59C8FA</color>
     <color name="rating_pg_13">#FFA63A</color>
     <color name="rating_r">#FF2525</color>
+
+    <color name="searchbar_theme_tint">#aaece6f0</color>
 </resources>
